// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jira getCurrentUser should forward any unknown error 1`] = `
{
  "message": "Some error message",
}
`;

exports[`jira getCurrentUser should get the current user 1`] = `
{
  "accountId": "Jerry.Rosenbaum",
  "displayName": "Niko",
  "groups": {
    "items": {
      "name": "asda",
    },
  },
}
`;

exports[`jira getCurrentUser should have a default message if there is none 1`] = `
{
  "code": 404,
  "message": "Something went wrong when connecting with jira",
}
`;

exports[`jira getCurrentUser should map the jira errors 1`] = `
{
  "code": 404,
  "message": "There was an error",
}
`;

exports[`jira getIssue gets and transforms the issue from Jira 1`] = `
{
  "description": "Eligendi placeat eos hic. Nostrum nam vel ipsa consequuntur nam repellendus. Architecto animi consectetur eaque quibusdam suscipit dolore similique. Quisquam similique eius non eveniet aut ullam. Odio perspiciatis sapiente porro illum quasi necessitatibus necessitatibus.",
  "id": 3695,
  "key": "FOTINGO-1314",
  "project": {
    "id": "doloremque",
    "key": "nisi",
  },
  "sanitizedSummary": "issue_with_a_lot_of_characters",
  "summary": "Issue with a lot of characters "$&'*,:;<>?@[]\`~‘’“”",
  "type": "Task",
  "url": "https://wee-codling.biz/browse/FOTINGO-1314",
}
`;
